force-app/main/default/objects/cdcpc__Part_Attribute__c/cdcpc__Part_Attribute__c.object-meta.xml
<CustomObject>
    <label>Part Attribute</label>
    <nameField>
        <displayFormat>PA-{000000000}</displayFormat>
        <label>Part Attribute Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Part Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>