force-app/main/default/objects/cdcpc__Part_Attribute__c/fields/cdcpc__Attribute__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Attribute__c</fullName>
    <label>Attribute</label>
    <length>255</length>
    <type>Text</type>
</CustomField>