force-app/main/default/objects/cdcpc__Part_Attribute__c/fields/cdcpc__Configured_Part__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Configured_Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Configured Part</label>
    <referenceTo>cdcpc__ConfiguredPart__c</referenceTo>
    <relationshipLabel>Part Attribute Configured Parts</relationshipLabel>
    <relationshipName>Part_Attribute_Configured_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>