force-app/main/default/objects/cdcpc__Part_Attribute__c/fields/cdcpc__Is_Conga__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Is_Conga__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Conga Output Attribute</label>
    <type>Checkbox</type>
</CustomField>