force-app/main/default/objects/cdcpc__Part_Attribute__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>NAME</columns>
    <columns>cdcpc__Configured_Part__c</columns>
    <columns>cdcpc__Sizing_Request_Item__c</columns>
    <columns>cdcpc__Attribute__c</columns>
    <columns>cdcpc__Value__c</columns>
    <columns>cdcpc__Raw_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>